# BioOTon

./: .gitignore  .gitmodules  CLC.shp  CORINE.ipynb  DL.ipynb  DL_ray_tune.ipynb  README.md  augmented_points_single.parquet  data_quality.ipynb  dbf_df.parquet  get_Xeno-Canto.ipynb  points.parquet  points_single.parquet  preprocessing.ipynb  pyproject.toml  test.ipynb  unet++.ipynb  xeno_points_single.parquet
CLC/: CLC.dbf  CLC.shx
functions/dl/: convenience_functions.py  data_classes.py  data_functions.py  network_components.py
functions/fair_train_test/: cython_kriging.c  cython_kriging.cp312-win_amd64.pyd  cython_kriging.cp38-win_amd64.pyd  cython_kriging.pyx  cython_kriging2.c  cython_kriging2.cp312-win_amd64.pyd  cython_kriging2.pyx  setup.py  utils_real_set.py
functions/plotting/: all_records.py  clc_classes.py  geo_recordings.py  spectrograms.py
functions/processing/: recordings.py  retrieval.py
model_docker/: Dockerfile  main.py  pyproject.toml
model_docker/functions/: convenience.py  dataset.py  loading.py  network_components.py  retrieval.py  sftp.py  torch_classes.py  training.py
server_scripts/: augment_data.py  create_augmentation_label_file.py  cut_dawn.py  cut_xeno_canto.py  denoise_dawn.py  denoise_xeno_canto.py  get_corrupted_files.py  get_xeno_canto.py  rename_files.py  tune_dl_model.py  upload_downsampled_files.py  upload_missing_files.py
